<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba</string>
    <string name="title_activity_status">Status Update</string>

    <string name="action_settings">Settings</string>
    <string name="status_button">Post</string>
    <string name="status_text_hint">What\'s Happening?</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_purge">Purge</string>
    <string name="action_post">Post</string>
    <string name="username_key">username</string>
    <string name="username_summary">What\'s your user name?</string>
    <string name="username">User Name</string>
    <string name="password_key">password</string>
    <string name="password_summary">How do you log in?</string>
    <string name="password">Password</string>
    <string name="interval_key">interval</string>
    <string name="interval_summary">How frequently should data refresh?</string>
    <string name="interval">Refresh Interval</string>

</resources>
